--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         <div class="flower__line__leaf flower__line__leaf--4"></div>
         <div class="flower__line__leaf flower__line__leaf--5"></div>
         <div class="flower__line__leaf flower__line__leaf--6"></div>
-        <h1 class="words_center">oleksid mu</h1>
+        <h1 class="words_center">sa Valentiin?</h1>
         <h1 class="words_top">Rebeka</h1>
         <a href="page2.html" class="heart-button">♥️</a>
         
@@ -545,7 +545,7 @@
         <div class="flower__line__leaf flower__line__leaf--2"></div>
         <div class="flower__line__leaf flower__line__leaf--3"></div>
         <div class="flower__line__leaf flower__line__leaf--4"></div>
-        <h1 class="rword">Valentiin?</h1>
+        <h1 class="rword">oleksid</h1>
         <h1 class="rword"></h1>
       </div>
     </div>
@@ -573,7 +573,7 @@
         <div class="flower__line__leaf flower__line__leaf--2"></div>
         <div class="flower__line__leaf flower__line__leaf--3"></div>
         <div class="flower__line__leaf flower__line__leaf--4"></div>
-        <h1 class="lword">Kas sa </h1>
+        <h1 class="lword">Kas mu</h1>
       </div>
     </div>
 
